# conosmium

./: .gitmodules  CMakeLists.txt  README.md  conanfile.py
Test/: main.cpp
data/: sample1.osm
